--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  0.3.4.tar.gz: 84496ba0b9f4cc1477160b665fda5dc876cbba2a
+  lua-MessagePack-0.5.2.tar.bz2: dc45b99e296da0405f4d4eab50573168bd296c5a
